# NyauxKC

./: .clang-format  .gdbinit  .gitignore  .gitmodules  GNUmakefile  LICENSE  README.md  b.patch  blah.txt  compile_command.json  compile_commands.json  cool.py  dump.txt  flake.nix  jinx-config  limine.conf  m  meow.patch  ok.py  shit.txt  test.tar  todo  todo.md  triggerbug.sh
build-support/: CMakeToolchain-x86_64.txt  config.guess  config.sub  cross_file-x86_64.txt  (+2 more)
kernel/: .gitignore  Cargo.toml  GNUmakefile  Nyaux  compile_commands.json  get-deps  kernel  linker-aarch64.ld  linker-riscv64.ld  linker-x86_64.ld  meson.build  meson_options.txt  rust-toolchain.toml
kernel/.cache/clangd/index/: acpi.h.934DCA974916AD99.idx  acpi.h.AD83636F214A6AB4.idx  arch.h.C8BC4025310F74FE.idx  arch_helpers.h.A4D704200E87E919.idx  atomic.h.BC7BEFD58C419455.idx  basic.h.630E33B9C07A271E.idx  cc-runtime.c.4F8C58079A818B2C.idx  compiler.h.57E4E5BC7771AEBA.idx  compiler.h.D94AD4E6178EBC77.idx  config.h.7D5700B3BA14D014.idx  context.h.6B96CB68B3879F28.idx  context.h.E441C3E5BF00735E.idx  default_handlers.c.ED466273F91034A1.idx  dynamic_array.h.1717CD625E069153.idx  elf.c.B785B7382222F442.idx  elf.h.87EB4D4FA08C41DF.idx  event.c.9793A6098FB2B997.idx  event.h.DA11AE668849E711.idx  event.h.E60D4C287E8867B8.idx  fb.c.EC7543F463C6CA50.idx  fb.h.DED2DB0D1A754D21.idx  flanterm.c.2F316A38B2E1C39F.idx  flanterm.h.CE6568D0846F66DC.idx  gdt.c.D685B4A7AB9E0CCE.idx  gdt.h.064EFC4AC43605C0.idx  helpers.h.42FD6B440A531302.idx  helpers.h.5B99DA81BBDF5A5D.idx  hpet.h.BCD0980A8AC9C425.idx  idt.c.9844782155DAA13F.idx  idt.h.74ADE39F0EDC59AE.idx  instructions.h.E25F42D263617B16.idx  interpreter.c.8D41029CD828F2A8.idx  interpreter.h.A1B1B550D3ECE222.idx  io.c.74ED3DAC881A3494.idx  io.h.568A52340E5B749D.idx  io.h.95FA847956C48255.idx  kernel_api.h.05636009DE035F70.idx  kmem.c.E80DF3755767B60E.idx  kmem.h.281315A6CEDFEF2C.idx  lapic.h.DC0D65E0DBA2503D.idx  (+59 more)
kernel/.cargo/: config.toml
kernel/src/: ft.rs  lib.rs  main.c  main.rs  nyaux.h
kernel/src/Mutexes/: KMutex.c  KMutex.h  seqlock.c  seqlock.h
kernel/src/acpi/: acpi.c  acpi.h  ec.c  ec.h  kernelapi.c  kernelapi.h
kernel/src/arch/: arch.c  arch.h  meson.build  mod.rs
kernel/src/arch/gdt/: mod.rs
kernel/src/arch/risc_v/: mod.rs
kernel/src/arch/risc_v/interrupts/: mod.rs
kernel/src/arch/risc_v/pt/: mod.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/arch/x86_64/cmos/: cmos.c  cmos.h
kernel/src/arch/x86_64/cpu/: lapic.c  lapic.h  smp.c  structures.h
kernel/src/arch/x86_64/fpu/: xsave.c  xsave.h
kernel/src/arch/x86_64/gdt/: gdt.c  gdt.h  gdte.asm  mod.rs
kernel/src/arch/x86_64/hpet/: mod.rs
kernel/src/arch/x86_64/idt/: idt.c  idt.h  idtstub.asm  mod.rs
kernel/src/arch/x86_64/instructions/: instructions.h
kernel/src/arch/x86_64/intel/: mod.rs
kernel/src/arch/x86_64/intel/iommu/: mod.rs
kernel/src/arch/x86_64/interrupt_controllers/: ioapic.c  ioapic.h
kernel/src/arch/x86_64/lapic/: mod.rs
kernel/src/arch/x86_64/page_tables/: pt.c  pt.h  stupidoberrow.asm
kernel/src/arch/x86_64/pt/: mod.rs
kernel/src/arch/x86_64/serial/: mod.rs
kernel/src/arch/x86_64/syscalls/: syscall.c  syscall.h  syscalls.asm
kernel/src/controllers/i8042/: i8042.c  i8042.h  ps2.c  ps2.h
kernel/src/cppglue/: glue.cpp  glue.hpp
kernel/src/cpu/: smp.c  smp.h
kernel/src/dbg/: kdb.c  kdb.h
kernel/src/dev/fbdev/: fb.c  fb.cpp  fb.h  fb.hpp
kernel/src/dev/keyboard/: keyboard.cpp  keyboard.hpp
kernel/src/dev/null/: null.c  null.h
kernel/src/dev/tty/: tty.c  tty.h
kernel/src/elf/: elf.c  elf.h
kernel/src/elf/symbols/: symbols.c  symbols.h
kernel/src/flanterm/: flanterm.c  flanterm.h  flanterm_private.h
kernel/src/flanterm/backends/: fb.c  fb.h  fb_private.h
kernel/src/flanterm/sixel/: sixel.c  sixel.h  sixel_api.h
kernel/src/fs/devfs/: devfs.c  devfs.h
kernel/src/fs/tmpfs/: tmpfs.c  tmpfs.h
kernel/src/fs/ustar/: ustar.c  ustar.h
kernel/src/fs/vfs/: fd.c  fd.h  fifo.c  fifo.h  vfs.c  vfs.h
kernel/src/gdt/: gdt.c  gdt.h
kernel/src/idt/: idt.c  idt.h  idtstub.asm
kernel/src/mem/: kmem.c  kmem.h  ksan.c  ksan.h  pmm.c  pmm.h  stupidoberrow.asm  vmm.c  vmm.h
kernel/src/mem/sanitizers/UBsan/: ubsan.c  ubsan.h
kernel/src/mem/sanitizers/ksan/: ksan.c  ksan.h
kernel/src/memory/: mod.rs  slab.rs
kernel/src/memory/pmm/: mod.rs
kernel/src/memory/vmm/: mod.rs
kernel/src/pci/: mod.rs  pci.c  pci.h
kernel/src/sched/: reaper.c  reaper.h  sched.c  sched.h  test.asm  yield.asm
kernel/src/scheduler/: mod.rs
kernel/src/smp/: smp.c  smp.h
kernel/src/term/: nanoprintf.h  term.c  term.h
kernel/src/terminal/: mod.rs
kernel/src/timers/: hpet.c  hpet.cpp  hpet.h  hpet.hpp  lapic.c  lapic.h  pvclock.cpp  pvclock.hpp  timer.cpp  timer.hpp
kernel/src/uacpi/: mod.rs
kernel/src/util/: mod.rs
kernel/src/util/lists/: mod.rs
kernel/src/utils/: basic.h  cmdline.cpp  cmdline.hpp  fixedptc.h  hashmap.c  hashmap.h  libc.c  libc.h  profiler.c  profiler.h
kernel/src/utils/exceptions/: exceptions.h
kernel/src/vfs/: vfs.c  vfs.h
kernel/subprojects/: cc-runtime.wrap  freestnd-c-hdrs.wrap  freestnd-cxx-hdrs.wrap  frigg.wrap
kernel/subprojects/packagefiles/cc-runtime/: meson.build
(+50 files in other folders)
