[package]
name = "nyaux"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nyaux"

[dependencies]
bitflags = { version = "2.10.0", features = ["bytemuck"] }
bytemuck = { version = "1.21", default-features = false, features = ["derive"] }
flantermbindings = "0.1.4"
limine-boot = { version = "0.6.0", git = "https://github.com/robotman2412/limine-boot-rust"}
rustc-demangle = {version = "0.1.27", default-features = false, features = ["core"] }
seq-macro = "0.3.6"
nyaux_uacpi_bindings = {git = "https://github.com/rayanmargham/nyaux_uacpi_bindings"}
[profile.release]
debug = true
